--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,132 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+author: "Shahadat Iqbal"
+date: "December 18, 2015"
+output: html_document
 ---
+#R preparations
+```{r,echo=TRUE}
+library(knitr)
+library(lattice)
+opts_chunk$set(echo = TRUE)
+```
+
+#Loading and preprocessing the data
+
+```{r,echo=TRUE}
+# load the data
+act=read.csv('activity.csv')
+# preprocessing the data
+act$date <- as.Date(act$date, format = "%Y-%m-%d")
+```
 
 
-## Loading and preprocessing the data
+#What is mean total number of steps taken per day?
+###1. Calculate the total number of steps taken per day
+
+```{r,echo=TRUE}
+total_step <- aggregate(steps ~ date, data = act, sum, na.rm = TRUE)
+head(total_step)
+```
+
+###2. If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day
+
+```{r,echo=TRUE}
+par(mfrow = c(1, 1))
+hist(total_step$steps, breaks = 20, 
+     main = "Total Number of Steps Taken per Day",
+     col = "blue", border = "white", xlab = "Steps per day", axes = FALSE)
+axis(1)
+axis(2, las = 1)
+```
+
+###3. Calculate and report the mean and median of the total number of steps taken per day
+```{r,echo=TRUE}
+mean(total_step$steps)
+median(total_step$steps)
+```
+
+
+#What is the average daily ativity pattern?
+
+###1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+
+```{r,echo=TRUE}
+avg_step <- aggregate(steps ~ interval, data = act, mean, na.rm = TRUE)
+plot(avg_step$interval, avg_step$steps, type = "l", lwd = 2, col = "blue",
+     main = "Average Number of Steps Taken: averaged across all day", axes = FALSE,
+     xlab = "Interval", ylab = "Average number of steps")
+axis(1)
+axis(2, las = 1)
+```
+
+###2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r,echo=TRUE}
+avg_step[which.max(avg_step$steps),]
+```
+
+
+#Imputting missing values
+
+###1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r,echo=TRUE}
+sum(is.na(act$steps))
+```
+The total number of missing values in the dataset are 2304
+
+###2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+Here I have used the mean of 5-minute interval to fill in the values of the missing values
+
+###3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r,echo=TRUE}
+act2 <- act # new dataset
+for (i in avg_step$interval) {
+    act2[act2$interval == i & is.na(act2$steps), ]$steps <- avg_step$steps[avg_step$interval == i]
+}
+head(act2) # no NAs
+```
+
+###4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+```{r,echo=TRUE}
+total_step_act2 <- aggregate(steps ~ date, data = act2, sum, na.rm = TRUE)
+hist(total_step_act2$steps, breaks = 20, 
+     main = "Total Number of Steps Taken Each Day (No missing value)",
+     col = "blue", border = "white", xlab = "Step", axes = FALSE)
+axis(1)
+axis(2, las = 1)
+mean(total_step_act2$steps)
+median(total_step_act2$steps)
+```
+
+The mean is the same as the mean from the first part of the assignment, but the median is not, although their values are close. Imputing missing data using the average of the 5-minute interval results in more data points equal to the mean and smaller variation of the distribution. Since many data points have the same values as the mean, the median is much likely to be the same as the mean as well.
+
+
+#Are there differences in activity pattern between weekday and weekends?
+
+###1. Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+
+```{r,echo=TRUE}
+act2$day <- weekdays(act2$date)
+act2$week <- ""
+act2[act2$day == "Saturday" | act2$day == "Sunday", ]$week <- "weekend"
+act2[!(act2$day == "Saturday" | act2$day == "Sunday"), ]$week <- "weekday"
+act2$week <- factor(act2$week)
+```
+
+###2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+
+```{r,echo=TRUE}
+avg_step_act2 <- aggregate(steps ~ interval + week, data = act2, mean)
+xyplot(steps ~ interval | week, data = avg_step_act2, type = "l", lwd = 2,
+       layout = c(1, 2), 
+       xlab = "5-minute interval", 
+       ylab = "Average number of steps",
+       main = "Average Number of Steps Taken (across all weekday days or weekend days)")
+```
 
 
 
-## What is mean total number of steps taken per day?
 
-
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
